.cct.txt
   Compiling gam v0.2.1 (/Users/user/gam)
error[E0425]: cannot find type `GpuDispatch` in module `linalg`
   --> src/gpu/mod.rs:218:56
    |
218 | pub fn try_dispatch_dense(op: GpuOperation) -> linalg::GpuDispatch {
    |                                                        ^^^^^^^^^^^ not found in `linalg`
    |
help: consider importing this enum
    |
 28 + use crate::solver::gpu::GpuDispatch;
    |
help: if you import `GpuDispatch`, refer to it directly
    |
218 - pub fn try_dispatch_dense(op: GpuOperation) -> linalg::GpuDispatch {
218 + pub fn try_dispatch_dense(op: GpuOperation) -> GpuDispatch {
    |

error[E0433]: failed to resolve: could not find `GpuDispatch` in `linalg`
   --> src/gpu/mod.rs:238:13
    |
238 |     linalg::GpuDispatch::Cpu
    |             ^^^^^^^^^^^ could not find `GpuDispatch` in `linalg`
    |
help: consider importing this enum
    |
 28 + use crate::solver::gpu::GpuDispatch;
    |
help: if you import `GpuDispatch`, refer to it directly
    |
238 -     linalg::GpuDispatch::Cpu
238 +     GpuDispatch::Cpu
    |

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
error: could not compile `gam` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `gam` (lib test) due to 2 previous errors
